tests/baselines/reference/ambientExternalModuleReopen.errors.txt
==== tests/cases/compiler/ambientExternalModuleReopen.ts (2 errors) ====
    declare module "fs" {
        var x: string;
    }
    declare module 'fs' {
                   ~~~~
!!! error TS2000: Duplicate identifier ''fs''.
                   ~~~~
!!! error TS2191: Ambient external module declaration cannot be reopened.
        var y: number;
    }